Darken classifier covers. Fixes #10.

--- a/styles/sonogram-classifier.scss
+++ b/styles/sonogram-classifier.scss
@@ -9,7 +9,7 @@
 
 			> .frequency-selector {
 				> .cover {
-					background: transparentize($black, 0.5);
+					background: transparentize($black, 0.4);
 					display: none;
 					left: 0;
 					position: absolute;
